test/corpus/expressions.txt
==================
Arithmetic precedence
==================

x = 1 + 2 * 3 ** 2 mod 4

---

(program
  (statement
    (assignment
      (identifier
        (name))
      (binary_expression
        (atom
          (integer))
        (additive_operator)
        (binary_expression
          (binary_expression
            (atom
              (integer))
            (multiplicative_operator)
            (binary_expression
              (atom
                (integer))
              (power_operator)
              (atom
                (integer))))
          (multiplicative_operator)
          (atom
            (integer)))))))

==================
Comparison and logic
==================

b = (1 < x) and (x <= 10) or not (x != 5)

---

(program
  (statement
    (assignment
      (identifier
        (name))
      (binary_expression
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (atom
                (integer))
              (comparison_operator)
              (identifier
                (name))))
          (and_operator)
          (parenthesized_expression
            (binary_expression
              (identifier
                (name))
              (comparison_operator)
              (atom
                (integer)))))
        (or_operator)
        (unary_expression
          (unary_operator)
          (parenthesized_expression
            (binary_expression
              (identifier
                (name))
              (comparison_operator)
              (atom
                (integer)))))))))

==================
Block operators
==================

begin
    a &= 1 + 1
    b &= a &+ 5
    c &= b &* 2
    d &= b &- a
end

---

(program
  (statement
    (block
      (statement
        (assignment
          (identifier
            (name))
          (binary_expression
            (atom
              (integer))
            (additive_operator)
            (atom
              (integer)))))
      (statement
        (assignment
          (identifier
            (name))
          (binary_expression
            (identifier
              (name))
            (additive_operator)
            (atom
              (integer)))))
      (statement
        (assignment
          (identifier
            (name))
          (binary_expression
            (identifier
              (name))
            (multiplicative_operator)
            (atom
              (integer)))))
      (statement
        (assignment
          (identifier
            (name))
          (binary_expression
            (identifier
              (name))
            (additive_operator)
            (identifier
              (name))))))))

==================
Function calls
==================

v = choice(1, 2, 3)
w = table("data.csv", "C235", "R_y__1.025")
check(v, 200 МПа, "не более")

---

(program
  (statement
    (assignment
      (identifier
        (name))
      (call_expression
        (name)
        (arguments
          (atom
            (integer))
          (atom
            (integer))
          (atom
            (integer))))))
  (statement
    (assignment
      (identifier
        (name))
      (call_expression
        (name)
        (arguments
          (string)
          (string)
          (string)))))
  (statement
    (call_expression
      (name)
      (arguments
        (identifier
          (name))
        (atom
          (integer)
          (unit))
        (string)))))

==================
Builtin constants
==================

E = (1 кг * #c**2) in Дж
S = #pi * (2 см)**2

---

(program
  (statement
    (assignment
      (identifier
        (name))
      (parenthesized_expression
        (binary_expression
          (atom
            (integer)
            (unit))
          (multiplicative_operator)
          (binary_expression
            (identifier
              (name))
            (power_operator)
            (atom
              (integer)))))
      (unit)))
  (statement
    (assignment
      (identifier
        (name))
      (binary_expression
        (identifier
          (name))
        (multiplicative_operator)
        (binary_expression
          (parenthesized_expression
            (atom
              (integer)
              (unit)))
          (power_operator)
          (atom
            (integer)))))))

==================
Unit conversion and where
==================

σ = F / A
σ_МПа = σ in МПа
E = (m * c**2) where
    m = 42
    c = 300
end

---

(program
  (statement
    (assignment
      (identifier
        (name))
      (binary_expression
        (identifier
          (name))
        (multiplicative_operator)
        (identifier
          (name)))))
  (statement
    (assignment
      (identifier
        (name))
      (identifier
        (name))
      (unit)))
  (statement
    (assignment
      (identifier
        (name))
      (parenthesized_expression
        (binary_expression
          (identifier
            (name))
          (multiplicative_operator)
          (binary_expression
            (identifier
              (name))
            (power_operator)
            (atom
              (integer)))))
      (where_clause
        (statement
          (assignment
            (identifier
              (name))
            (atom
              (integer))))
        (statement
          (assignment
            (identifier
              (name))
            (atom
              (integer))))))))
